# ponderada-terraform

./: README.md  main.tf  mkdocs.yml  pyproject.toml
docs/: exe.md  index.md
exe/: index.html
search/: search_index.json
site/: 404.html  index.html
